--- a/my_first_pod.yaml
+++ b/my_first_pod.yaml
@@ -13,3 +13,14 @@ spec:
     image: zxcvbnius/docker-demo
     ports:
       - containerPort: 3000
+    env:
+      - name: SECRET_USERNAME
+        valueFrom:
+          secretKeyRef:
+            name: demo-secret-from-yaml
+            key: username
+      - name: SECRET_PASSWORD
+        valueFrom:
+          secretKeyRef:
+            name: demo-secret-from-yaml
+            key: password
