--- a/wordpress/wordpress-service.yaml
+++ b/wordpress/wordpress-service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: wordpress-deployment
+    app: wordpress
   ports:
     - nodePort: 30300
       port: 3000
